fixed spacing for mobile optimization

--- a/src/components/SharedComponentStyles/CardForm.css
+++ b/src/components/SharedComponentStyles/CardForm.css
@@ -7,13 +7,13 @@
 }
 
 .action-card {
-    width: 70%;
+    width: 85%;
     margin-bottom: 10%;
 }
 
 .action-text-field {
     margin-bottom: 1rem !important;
-    width: 80%;
+    width: 90%;
 }
 
 .main-action-button {
